--- a/package.json
+++ b/package.json
@@ -3,16 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.7.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
+    "@kuma-ui/core": "^0.4.1",
+    "@kuma-ui/next-plugin": "^0.6.1",
     "@types/node": "20.2.6",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
@@ -20,7 +19,6 @@
     "classnames": "^2.3.2",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
-    "framer-motion": "^10.12.16",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
