--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -4,28 +4,32 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "hardhat node",
+    "compile": "hardhat compile",
+    "deploy:dev": "hardhat run scripts/deploy.ts --network localhost",
+    "attach:dev": "hardhat run scripts/attach.ts --network localhost",
+    "upgrade:dev": "hardhat run scripts/upgrade.ts --network localhost"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.2.3",
-    "@nomiclabs/hardhat-etherscan": "^3.1.7",
-    "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@openzeppelin/contracts-upgradeable": "^4.9.1",
     "@openzeppelin/hardhat-upgrades": "^1.27.0",
-    "@swc/core": "^1.3.62",
+    "@swc/core": "^1.3.64",
     "@swc/helpers": "^0.5.1",
+    "@typechain/ethers-v5": "^11.0.0",
+    "@typechain/hardhat": "^7.0.0",
     "@types/mocha": "^10.0.1",
-    "@types/node": "^20.3.0",
+    "@types/node": "^20.3.1",
     "@types/sinon-chai": "^3.2.9",
     "chai": "^4.3.7",
-    "ethereum-waffle": "^4.0.10",
     "ethers": "^5.7.2",
     "hardhat": "^2.15.0",
     "prettier": "^2.8.8",
     "regenerator-runtime": "^0.13.11",
     "ts-node": "^10.9.1",
+    "typechain": "^8.2.0",
     "typescript": "^5.1.3"
   }
 }
