--- a/smart-contract/tsconfig.json
+++ b/smart-contract/tsconfig.json
@@ -8,6 +8,8 @@
     "skipLibCheck": true,
     "resolveJsonModule": true
   },
+  "include": ["./scripts", "./test", "./typechain-types"],
+  "files": ["./hardhat.config.ts"],
   "ts-node": {
     "swc": true
   }
