--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@auth/prisma-adapter": "^1.0.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@google-cloud/storage": "^6.11.0",
     "@heroicons/react": "^2.0.18",
-    "@prisma/client": "^4.15.0",
     "@kuma-ui/core": "^0.4.1",
     "@kuma-ui/next-plugin": "^0.6.1",
+    "@prisma/client": "^4.15.0",
     "@types/node": "20.2.6",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
@@ -23,6 +24,7 @@
     "classnames": "^2.3.2",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "ethers": "^6.6.0",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
