--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "start": "hardhat node",
     "compile": "hardhat compile",
-    "deploy:dev": "hardhat run scripts/deploy.ts --network localhost",
-    "attach:dev": "hardhat run scripts/attach.ts --network localhost",
-    "upgrade:dev": "hardhat run scripts/upgrade.ts --network localhost"
+    "deploy:dev": "hardhat run scripts/local/deploy.ts --network localhost",
+    "attach:dev": "hardhat run scripts/local/attach.ts --network localhost",
+    "upgrade:dev": "hardhat run scripts/local/upgrade.ts --network localhost",
+    "deploy:prod": "hardhat run scripts/prod/deploy.ts --network mumbai",
+    "attach:prod": "hardhat run scripts/prod/attach.ts --network mumbai",
+    "upgrade:prod": "hardhat run scripts/prod/upgrade.ts --network mumbai"
   },
   "author": "",
   "license": "ISC",
@@ -31,5 +34,8 @@
     "ts-node": "^10.9.1",
     "typechain": "^8.2.0",
     "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.1.4"
   }
 }
