--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
+    "dotenv": "^16.1.4",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
-    "ethers": "^6.6.0",
+    "ethers": "^5.7.2",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
@@ -37,6 +38,7 @@
   "devDependencies": {
     "eslint-config-prettier": "^8.8.0",
     "prettier": "^2.8.8",
-    "prisma": "^4.15.0"
+    "prisma": "^4.15.0",
+    "ts-node": "^10.9.1"
   }
 }
