--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-scroll": "^1.8.9",
     "recoil": "^0.7.7",
     "swr": "^2.1.5",
     "tailwindcss": "3.3.2",
