--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-config-next": "13.4.4",
     "ethers": "^5.7.2",
     "formidable": "^3.4.0",
+    "lru-cache": "^10.0.0",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
