--- a/ml-job/rvc-trainer/Dockerfile
+++ b/ml-job/rvc-trainer/Dockerfile
@@ -3,6 +3,7 @@ FROM nvidia/cuda:11.8.0-devel-ubuntu22.04
 # Install dependencies
 RUN apt-get update && apt-get install -y ffmpeg unzip wget python3 python3-pip git
 RUN python3 -m pip install runpod requests fastapi uvicorn[standard] google-cloud-storage google-auth
+RUN python3 -m pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
 
 WORKDIR /workspace
 RUN git clone -b scripts https://github.com/terracottahaniwa/rvc-webui
@@ -17,6 +18,7 @@ RUN python3 -c "from modules.core import download_models; download_models()"
 WORKDIR /workspace
 ADD gcloud.json .
 ADD core.py .
+ADD debug.py .
 ADD serverless.py .
 
 # Run server
