--- a/ml-job/rvc-trainer/docker-compose.yml
+++ b/ml-job/rvc-trainer/docker-compose.yml
@@ -10,3 +10,10 @@ services:
     ports:
       - "8080:80"
     command: [sh, -c, uvicorn debug:app --host 0.0.0.0 --port 80 --reload]
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
