--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "20.2.6",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
+    "@voicechain/smart-contract": "file:smart-contract",
     "alchemy-sdk": "^2.9.0",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
