--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smart-contract",
+  "name": "@voicechain/smart-contract",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,31 +11,32 @@
     "upgrade:dev": "hardhat run scripts/local/upgrade.ts --network localhost",
     "deploy:prod": "hardhat run scripts/prod/deploy.ts --network mumbai",
     "attach:prod": "hardhat run scripts/prod/attach.ts --network mumbai",
-    "upgrade:prod": "hardhat run scripts/prod/upgrade.ts --network mumbai"
+    "upgrade:prod": "hardhat run scripts/prod/upgrade.ts --network mumbai",
+    "postinstall": "hardhat clean && hardhat compile"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.2.3",
-    "@openzeppelin/contracts-upgradeable": "^4.9.1",
-    "@openzeppelin/hardhat-upgrades": "^1.27.0",
     "@swc/core": "^1.3.64",
     "@swc/helpers": "^0.5.1",
-    "@typechain/ethers-v5": "^11.0.0",
-    "@typechain/hardhat": "^7.0.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.3.1",
     "@types/sinon-chai": "^3.2.9",
     "chai": "^4.3.7",
-    "ethers": "^5.7.2",
-    "hardhat": "^2.15.0",
     "prettier": "^2.8.8",
     "regenerator-runtime": "^0.13.11",
     "ts-node": "^10.9.1",
-    "typechain": "^8.2.0",
     "typescript": "^5.1.3"
   },
   "dependencies": {
-    "dotenv": "^16.1.4"
+    "dotenv": "^16.1.4",
+    "typechain": "^8.2.0",
+    "hardhat": "^2.15.0",
+    "ethers": "^5.7.2",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@openzeppelin/contracts-upgradeable": "^4.9.1",
+    "@openzeppelin/hardhat-upgrades": "^1.27.0",
+    "@typechain/ethers-v5": "^11.0.0",
+    "@typechain/hardhat": "^7.0.0"
   }
 }
