--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -9,5 +9,7 @@ jobs:
     name: build
     runs-on: ubuntu-latest
     steps:
-      - name: curl
+      - name: trainer
         run: curl --show-error "https://voice-chain.vercel.app/api/cron/checkTrainer"
+      - name: transaction
+        run: curl --show-error "https://voice-chain.vercel.app/api/cron/checkTransaction"
