--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/formidable": "^2.0.6",
     "@types/react-scroll": "^1.8.7",
     "eslint-config-prettier": "^8.8.0",
+    "next-intercept-stdout": "^1.0.1",
     "prettier": "^2.8.8",
     "prisma": "^4.15.0",
     "ts-node": "^10.9.1"
