--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "private": true,
   "scripts": {
     "start": "hardhat node",
     "compile": "hardhat compile",
